clusters/management-hub/capacitor/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: gitops.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.mgmt.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitops.nwlnexus.net`)
      kind: Rule
      services:
        - name: capacitor-next
          port: 80
  tls:
    secretName: capacitor-tls
